# pdf-browser

./: .pre-commit-config.yaml  README.md  pyproject.toml
pdf_browser/: main.py  mainwindow.ui  ui_mainwindow.py
