[tool.poetry]
name = "pdf-browser"
version = "0.1.0"
description = ""
authors = ["Yossi Zahn <yossizahn@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_browser"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.20.2"
pyqt6 = "^6.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
mypy = "^0.982"
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
