[project]
name = "pdf-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.24.13",
    "pyqt6-stubs",
    "pyqt6>=6.7.1",
]

[tool.uv.sources]
pyqt6-stubs = { git = "https://github.com/python-qt-tools/PyQt6-stubs" }
